crossplane_v2/managed_resources/keycloak/kubectl_deployment/keycloak_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: buesolution.es
      http:
        paths:
          - path: /keycloak(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: blue-keycloak-service
                port:
                  number: 8080
